[package]
name = "fooster_lights"
version = "0.2.0"
authors = ["Lily Foster <lily@lily.flowers>"]
edition = "2021"
publish = false

[dependencies]
futures-util = "^0.3"
#rocket = { version = "^0.5", features = ["json"] }
#rocket_dyn_templates = { version = "^0.1", features = ["tera"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rosc = "^0.9"
rppal = "^0.14"
serde_with = "^2.1"
tokio-tungstenite = "^0.18"
yansi = "^0.5"
